Bug 1303761 - Disable paint skipping for all scroll frames between the fixed element and the scrolled clip. r=tnikkel, a=gchang

MozReview-Commit-ID: 1FIQcJT55DJ